@@ -12,6 +12,7 @@
     replace G_VALUE_INIT macro #126
     added file list Edit|Select By Pattern
     adjust parse url
+    Show Output option should open on additional output after closure
 0.7.10  2012-07-25:
     added sort options #87 #37 #23
     completed russian translation ru.po
